<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@null"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/upcaretTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcaret"
        android:layout_gravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="18sp"
        android:textStyle="normal"
        android:background="@null"
        android:alpha="0.5"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/englishTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="normal"
            android:background="@android:color/white"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hindiTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/englishTextView"
            android:text="@string/hindi"
            android:textSize="17sp"
            android:padding="5dp"
            android:textStyle="normal"
            android:background="@android:color/white"
            android:textColor="@android:color/darker_gray" />
    </RelativeLayout>
</LinearLayout>
